--- a/CauldronMods.csproj
+++ b/CauldronMods.csproj
@@ -23,10 +23,10 @@
 
   <ItemGroup>
     <Reference Include="EngineCommon">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Steam\SteamApps\common\Sentinels of the Multiverse\Sentinels_Data\Managed\EngineCommon.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Sentinels of the Multiverse\Sentinels_Data\Managed\EngineCommon.dll</HintPath>
     </Reference>
     <Reference Include="SentinelsEngine">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Steam\SteamApps\common\Sentinels of the Multiverse\Sentinels_Data\Managed\SentinelsEngine.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Sentinels of the Multiverse\Sentinels_Data\Managed\SentinelsEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
 
