I'll get the template right eventually

--- a/CauldronMods.csproj
+++ b/CauldronMods.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="CodingBugs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
@@ -37,6 +41,7 @@
   <ItemGroup>
     <Folder Include="Controller\Heroes\LadyOfTheWood\Cards\" />
     <Folder Include="Controller\Heroes\LadyOfTheWood\CharacterCards\" />
+    <Folder Include="Controller\Villains\Tiamat\Cards\" />
   </ItemGroup>
 
 </Project>
