Exclude template sample Remove old reference to CodingBugs.txt location

--- a/CauldronMods.csproj
+++ b/CauldronMods.csproj
@@ -16,11 +16,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="CodingBugs" />
+    <Compile Remove="Utility\CardController\CardController.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="CodingBugs" />
+    <None Remove="CodingBugs" />
   </ItemGroup>
 
   <ItemGroup>
