Changes for Catacombs
Added deck to manifest.json
Removed in progress from read me

--- a/Docs/manifest.json
+++ b/Docs/manifest.json
@@ -23,6 +23,7 @@
 		"environments":{
 			"FSCContinuanceWanderer",
 			"HalberdExperimentalResearchFacility",
+			"StSimeonsCatacombs",
 			"TheWanderingIsle"
 		}
 	}
