--- a/Docs/manifest.json
+++ b/Docs/manifest.json
@@ -23,6 +23,7 @@
 		"environments":{
 			"FSCContinuanceWanderer",
 			"HalberdExperimentalResearchFacility",
+			"Northspar",
 			"StSimeonsCatacombs",
 			"TheWanderingIsle"
 		}
