Revert "Updated tests with new Identifier name"
This reverts commit 0f774daef4df16d36e668f073dbd412170909179.

--- a/CauldronMods.csproj
+++ b/CauldronMods.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controller\Heroes\LadyOfTheWood\Cards\" />
     <Folder Include="Controller\Heroes\LadyOfTheWood\CharacterCards\" />
   </ItemGroup>
 
