--- a/Docs/manifest.json
+++ b/Docs/manifest.json
@@ -24,7 +24,8 @@
 			"FSCContinuanceWanderer",
 			"HalberdExperimentalResearchCenter",
 			"StSimeonsCatacombs",
-			"TheWanderingIsle"
+			"TheWanderingIsle",
+			"BlackwoodForest"
 		]
 	}
 }
