added vanish to manifest

--- a/Docs/manifest.json
+++ b/Docs/manifest.json
@@ -10,11 +10,12 @@
 			"DocHavoc",
 			"TheKnight",
 			"LadyOfTheWood",
-			"Necro",
 			"Malichae",
+			"Necro",
 			"Starlight",
 			"TheStranger",
-			"TangoOne"
+			"TangoOne",
+			"Vanish"
 		],
 		"villains":[
 			"Anathema",
