--- a/Docs/manifest.json
+++ b/Docs/manifest.json
@@ -1,36 +1,31 @@
 {
 	"title": "Cauldron",
-	"author": "Cualdron Mod Team",
+	"author": "Cauldron Mod Team",
 	"description": "Fanmade expansions converted to the digital tabletop.",
-	"namespace":"Cualdron",
-	"dll":"CauldronMods.dll",
-	"decks":{
-		"heroes":{
+	"namespace": "Cauldron",
+	"dll": "CauldronMods.dll",
+	"decks": {
+		"heroes": [
 			"Baccarat",
 			"DocHavoc",
-			"TheKnight",
 			"LadyOfTheWood",
-			"Necro",
 			"Malichae",
-			"TheStranger",
-			"TangoOne"
-		},
-		"villains":{
+			"Necro",
+			"Starlight",
+			"TangoOne",
+			"TheKnight",
+			"TheStranger"
+		],
+		"villains": [
 			"Anathema",
 			"Gray",
 			"Tiamat"
-		},
-		"environments":{
-			"FSCContinuanceWanderer",
-			"HalberdExperimentalResearchFacility",
+		],
+		"environments": [
+			"BlackwoodForest",
+			"HalberdExperimentalResearchCenter",
+			"StSimeonsCatacombs",
 			"TheWanderingIsle"
-		}
-	},
-	"variants": {
-		"heroes":{
-			"Baccarat":[
-				"AceOfSwordsBaccarat"
-			]
-		}
+		]
 	}
 }
