Update Manifest and Readme

--- a/Docs/manifest.json
+++ b/Docs/manifest.json
@@ -27,6 +27,7 @@
 		],
 		"environments": [
 			"BlackwoodForest",
+			"Cybersphere",
 			"FSCContinuanceWanderer",
 			"HalberdExperimentalResearchCenter",
 			"Northspar",
