Fixed Manifest and Readme

--- a/Docs/manifest.json
+++ b/Docs/manifest.json
@@ -27,7 +27,7 @@
 		],
 		"environments": [
 			"BlackwoodForest",
-			"Cybersphere",
+			"TheCybersphere",
 			"FSCContinuanceWanderer",
 			"HalberdExperimentalResearchCenter",
 			"Northspar",
