--- a/Docs/manifest.json
+++ b/Docs/manifest.json
@@ -31,6 +31,7 @@
 			"HalberdExperimentalResearchCenter",
 			"Northspar",
 			"StSimeonsCatacombs",
+			"SuperstormAkela",
 			"TheWanderingIsle"
 		]
 	}
