--- a/CauldronMods.csproj
+++ b/CauldronMods.csproj
@@ -48,4 +48,8 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controller\Villains\Celadroch\CardSubClasses\" />
+  </ItemGroup>
+
 </Project>
