Add Swarm Eater to manifest

--- a/Docs/manifest.json
+++ b/Docs/manifest.json
@@ -18,7 +18,8 @@
 		],
 		"villains":[
 			"Anathema",
-			"Tiamat"
+			"Tiamat",
+			"SwarmEater"
 		],
 		"environments":[
 			"HalberdExperimentalResearchCenter",
