fix formatting, add missing comma

--- a/Docs/manifest.json
+++ b/Docs/manifest.json
@@ -23,8 +23,8 @@
 			"Dendron",
 			"Gray",
 			"TheRam",
-			"Tiamat"
-    "SwarmEater"
+			"Tiamat",
+      "SwarmEater"
 		],
 		"environments": [
 			"BlackwoodForest",
