Add the Cybersphere to the manifest

--- a/Docs/manifest.json
+++ b/Docs/manifest.json
@@ -28,6 +28,7 @@
 		],
 		"environments": [
 			"BlackwoodForest",
+			"TheCybersphere",
 			"FSCContinuanceWanderer",
 			"HalberdExperimentalResearchCenter",
 			"Northspar",
