--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,167 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+Art/Atlas/AnathemaAtlas0.json
+
+Art/Atlas/AnathemaAtlas0.png
+
+Art/Atlas/CatchwaterHarborAtlas0.json
+
+Art/Atlas/CatchwaterHarborAtlas0.png
+
+Art/Atlas/CeldarochAtlas0.json
+
+Art/Atlas/CeldarochAtlas0.png
+
+Art/Atlas/CricketAtlas0.json
+
+Art/Atlas/CricketAtlas0.png
+
+Art/Atlas/CypherAtlas0.json
+
+Art/Atlas/CypherAtlas0.png
+
+Art/Atlas/DendronAtlas0.json
+
+Art/Atlas/DendronAtlas0.png
+
+Art/Atlas/DriftAtlas0.json
+
+Art/Atlas/DriftAtlas0.png
+
+Art/Atlas/DynamoAtlas0.json
+
+Art/Atlas/DynamoAtlas0.png
+
+Art/Atlas/EchelonAtlas0.json
+
+Art/Atlas/EchelonAtlas0.png
+
+Art/Atlas/GargoyleAtlas0.json
+
+Art/Atlas/GargoyleAtlas0.png
+
+Art/Atlas/GrayAtlas0.json
+
+Art/Atlas/GrayAtlas0.png
+
+Art/Atlas/GyrosaurAtlas0.json
+
+Art/Atlas/GyrosaurAtlas0.png
+
+Art/Atlas/HalberdExperimentalResearchCenterAtlas0.json
+
+Art/Atlas/HalberdExperimentalResearchCenterAtlas0.png
+
+Art/Atlas/ImpactAtlas0.json
+
+Art/Atlas/ImpactAtlas0.png
+
+Art/Atlas/MagnificentMaraAtlas0.json
+
+Art/Atlas/MagnificentMaraAtlas0.png
+
+Art/Atlas/MenagerieAtlas0.json
+
+Art/Atlas/MenagerieAtlas0.png
+
+Art/Atlas/MythosAtlas0.json
+
+Art/Atlas/MythosAtlas0.png
+
+Art/Atlas/NightloreCouncilAtlas0.json
+
+Art/Atlas/NightloreCouncilAtlas0.png
+
+Art/Atlas/NorthsparAtlas0.json
+
+Art/Atlas/NorthsparAtlas0.png
+
+Art/Atlas/OriphelAtlas0.json
+
+Art/Atlas/OriphelAtlas0.png
+
+Art/Atlas/OutlanderAtlas0.json
+
+Art/Atlas/OutlanderAtlas0.png
+
+Art/Atlas/PhaseAtlas0.json
+
+Art/Atlas/PhaseAtlas0.png
+
+Art/Atlas/PyreAtlas0.json
+
+Art/Atlas/PyreAtlas0.png
+
+Art/Atlas/ScreaMachineAtlas0.json
+
+Art/Atlas/ScreaMachineAtlas0.png
+
+Art/Atlas/SetupGameAtlas0.json
+
+Art/Atlas/SetupGameAtlas0.png
+
+Art/Atlas/StarlightAtlas0.json
+
+Art/Atlas/StarlightAtlas0.png
+
+Art/Atlas/StSimeonsCatacombsAtlas0.json
+
+Art/Atlas/StSimeonsCatacombsAtlas0.png
+
+Art/Atlas/SuperstormAkelaAtlas0.json
+
+Art/Atlas/SuperstormAkelaAtlas0.png
+
+Art/Atlas/SwarmEaterAtlas0.json
+
+Art/Atlas/SwarmEaterAtlas0.png
+
+Art/Atlas/TerminusAtlas0.json
+
+Art/Atlas/TerminusAtlas0.png
+
+Art/Atlas/TheChasmOfAThousandNightsAtlas0.json
+
+Art/Atlas/TheChasmOfAThousandNightsAtlas0.png
+
+Art/Atlas/TheCybersphereAtlas0.json
+
+Art/Atlas/TheCybersphereAtlas0.png
+
+Art/Atlas/TheInfernalChoirAtlas0.json
+
+Art/Atlas/TheInfernalChoirAtlas0.png
+
+Art/Atlas/TheMistressOfFateAtlas0.json
+
+Art/Atlas/TheMistressOfFateAtlas0.png
+
+Art/Atlas/TheRamAtlas0.json
+
+Art/Atlas/TheRamAtlas0.png
+
+Art/Atlas/TheWanderingIsleAtlas0.json
+
+Art/Atlas/TheWanderingIsleAtlas0.png
+
+Art/Atlas/TiamatAtlas0.json
+
+Art/Atlas/TiamatAtlas0.png
+
+Art/Atlas/TitanAtlas0.json
+
+Art/Atlas/TitanAtlas0.png
+
+Art/Atlas/VaultFiveAtlas0.json
+
+Art/Atlas/VaultFiveAtlas0.png
+
+Art/Atlas/VectorAtlas0.json
+
+Art/Atlas/VectorAtlas0.png
+
+Art/Atlas/WindmillCityAtlas0.json
+
+Art/Atlas/WindmillCityAtlas0.png
