--- a/Docs/manifest.json
+++ b/Docs/manifest.json
@@ -2,7 +2,7 @@
 	"title": "Cauldron",
 	"author": "Cauldron Mod Team",
 	"description":[
-		"The Cauldron is a fan-made expansion created by Matthew Bishop, his roommate, and his brother with 55 unique and challenging Hero, Villain, and Environment decks, with guest decks contributed by Benjamin Yamada (Halberd Experimental Research Center) and Geoffrey Benedict (Magnificent Mara)",
+		"The Cauldron is a fan-made expansion created by Matthew Bishop, his roommate, and his brother with 55 unique and challenging Hero, Villain, and Environment decks, with guest decks contributed by Benjamin Yamada (Halberd Experimental Research Center) and Geoffrey Benedict (Magnificent Mara).",
 		"The modification features complete art and music, including dozens of new pieces of art created just for the digital game by Tosx!",
 		"Consider supporting Tosx by purchasing physical cards from DriveThruRpg or checking out MeromorphGames.com.",
 	],
