Added Artifact SubClass Controller

--- a/CauldronMods/manifest.json
+++ b/CauldronMods/manifest.json
@@ -50,7 +50,8 @@
 			"Northspar",
 			"StSimeonsCatacombs",
 			"SuperstormAkela",
-			"TheWanderingIsle"
+			"TheWanderingIsle",
+			"VaultFive"
 		]
 	}
 }
