Added Catchwater to manifest

--- a/CauldronMods/manifest.json
+++ b/CauldronMods/manifest.json
@@ -44,6 +44,7 @@
 		],
 		"environments": [
 			"BlackwoodForest",
+			"CatchwaterHarbor",
 			"TheCybersphere",
 			"FSCContinuanceWanderer",
 			"HalberdExperimentalResearchCenter",
