Added to manifest

--- a/CauldronMods/manifest.json
+++ b/CauldronMods/manifest.json
@@ -47,6 +47,7 @@
 			"TheCybersphere",
 			"FSCContinuanceWanderer",
 			"HalberdExperimentalResearchCenter",
+			"NightloreCitadel",
 			"Northspar",
 			"StSimeonsCatacombs",
 			"SuperstormAkela",
