--- a/CauldronMods/CauldronMods.csproj
+++ b/CauldronMods/CauldronMods.csproj
@@ -33,6 +33,11 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controller\Heroes\Drift\CharacterCards\AllInGoodTime\" />
+    <Folder Include="Controller\Heroes\Drift\CharacterCards\Base\" />
+  </ItemGroup>
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="copy /Y &quot;$(TargetDir)$(TargetName).dll&quot; &quot;C:\Program Files (x86)\Steam\steamapps\common\Sentinels of the Multiverse\mods\CauldronMods\$(TargetName).dll&quot;&#xD;&#xA;copy /Y &quot;$(TargetDir)manifest.json&quot; &quot;C:\Program Files (x86)\Steam\steamapps\common\Sentinels of the Multiverse\mods\CauldronMods\manifest.json&quot;" />
   </Target>
