--- a/CauldronMods/CauldronMods.csproj
+++ b/CauldronMods/CauldronMods.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controller\Heroes\Drift\CharacterCards\AllInGoodTime\**" />
+    <Compile Remove="Controller\Heroes\Drift\CharacterCards\Base\**" />
+    <EmbeddedResource Remove="Controller\Heroes\Drift\CharacterCards\AllInGoodTime\**" />
+    <EmbeddedResource Remove="Controller\Heroes\Drift\CharacterCards\Base\**" />
+    <None Remove="Controller\Heroes\Drift\CharacterCards\AllInGoodTime\**" />
+    <None Remove="Controller\Heroes\Drift\CharacterCards\Base\**" />
     <None Remove="DeckLists\**\*.json" />
   </ItemGroup>
 
@@ -31,11 +37,6 @@
     <Reference Include="SentinelsEngine">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Sentinels of the Multiverse\Sentinels_Data\Managed\SentinelsEngine.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controller\Heroes\Drift\CharacterCards\AllInGoodTime\" />
-    <Folder Include="Controller\Heroes\Drift\CharacterCards\Base\" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
