Added to Manifest

--- a/CauldronMods/manifest.json
+++ b/CauldronMods/manifest.json
@@ -53,7 +53,8 @@
 			"StSimeonsCatacombs",
 			"SuperstormAkela",
 			"TheWanderingIsle",
-			"VaultFive"
+			"VaultFive",
+			"WindmillCity"
 		]
 	}
 }
