Add Oblask Crater to manifest

--- a/CauldronMods/manifest.json
+++ b/CauldronMods/manifest.json
@@ -17,6 +17,7 @@
 			"Cypher",
 			"DocHavoc",
 			"Echelon",
+			"Gargoyle",
 			"Impact",
 			"LadyOfTheWood",
 			"MagnificentMara",
@@ -50,6 +51,7 @@
 			"FSCContinuanceWanderer",
 			"HalberdExperimentalResearchCenter",
 			"Northspar",
+			"OblaskCrater",
 			"StSimeonsCatacombs",
 			"SuperstormAkela",
 			"TheChasmOfAThousandNights",
