Added to manifest

--- a/CauldronMods/manifest.json
+++ b/CauldronMods/manifest.json
@@ -49,6 +49,7 @@
 		"environments": [
 			"BlackwoodForest",
 			"CatchwaterHarbor",
+			"DungeonsOfTerror",
 			"TheCybersphere",
 			"FSCContinuanceWanderer",
 			"HalberdExperimentalResearchCenter",
