--- a/CauldronMods/CauldronMods.csproj
+++ b/CauldronMods/CauldronMods.csproj
@@ -16,12 +16,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Controller\Heroes\Drift\CharacterCards\AllInGoodTime\**" />
-    <Compile Remove="Controller\Heroes\Drift\CharacterCards\Base\**" />
-    <EmbeddedResource Remove="Controller\Heroes\Drift\CharacterCards\AllInGoodTime\**" />
-    <EmbeddedResource Remove="Controller\Heroes\Drift\CharacterCards\Base\**" />
-    <None Remove="Controller\Heroes\Drift\CharacterCards\AllInGoodTime\**" />
-    <None Remove="Controller\Heroes\Drift\CharacterCards\Base\**" />
     <None Remove="DeckLists\**\*.json" />
     <None Include="..\LICENSE">
       <Pack>True</Pack>
@@ -49,6 +43,12 @@
     <Reference Include="SentinelsEngine">
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Sentinels of the Multiverse\Sentinels_Data\Managed\SentinelsEngine.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="DeckLists\Environment\OblaskCraterDeckList.json">
+      <LogicalName>Cauldron.DeckLists.%(EmbeddedResource.FileName).json</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
