--- a/CauldronMods/manifest.json
+++ b/CauldronMods/manifest.json
@@ -8,13 +8,13 @@
 	],
 	"version": "v0.4.0",
 	"credits": [
-		"Art: Tosx.",
-		"Software Development: DragonZ, MSpekkio, NinjaMonkey, QuagmaBlast, smJake123, wrhyme29.",
-		"Art Direction: catwhowalksbyhimself, smJake123.",
-		"Music: Shane Ivers.",
-		"Music Direction: TopherGerkey.",
-		"Playtesters: DireAvenger20, TheRealTails, TopherGerkey, jetto, qoalabear and many more.",
-		"Additional Music Credits can be found here: https://bit.ly/38mwFJo"
+		"<b>Art:</b> Tosx.",
+		"<b>Software Development:</b> DragonZ, MSpekkio, NinjaMonkey, QuagmaBlast, smJake123, wrhyme29.",
+		"<b>Art Direction:</b> catwhowalksbyhimself, smJake123.",
+		"<b>Music:</b> Shane Ivers.",
+		"<b>Music Direction:</b> TopherGerkey.",
+		"<b>Playtesters:</b> DireAvenger20, TheRealTails, TopherGerkey, jetto, qoalabear, ChronosMysty, Ruduen, origamiswami, MrEdgeCase, Darkstand, Bart_KF jkittycat, Pricyprov, kree1, Fezudu, ColinAmos, wilwil60 and many more.",
+		"<b>Additional Music Credits can be found here:</b> https://bit.ly/38mwFJo"
 	],
 	"namespace": "Cauldron",
 	"dll": "CauldronMods.dll",
