Added check for user setting and logic for discarding all crash cards

--- a/CauldronMods/CauldronMods.csproj
+++ b/CauldronMods/CauldronMods.csproj
@@ -13,6 +13,7 @@
 	<PackageProjectUrl>https://github.com/SotMSteamMods/CauldronMods</PackageProjectUrl>
 	<RepositoryUrl></RepositoryUrl>
 	<NeutralLanguage>en</NeutralLanguage>
+	<OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
