--- a/CauldronMods/manifest.json
+++ b/CauldronMods/manifest.json
@@ -7,6 +7,7 @@
 		"Consider supporting Tosx by purchasing physical cards from DriveThruRpg or checking out MeromorphGames.com."
 	],
 	"version": "v0.4.3",
+	"color": "ec59a0",
 	"publishedFileId": 2437294168,
 	"credits": [
 		"<b>Art:</b> Tosx.",
