--- a/CauldronMods/manifest.json
+++ b/CauldronMods/manifest.json
@@ -6,16 +6,16 @@
 		"The modification features complete art and music, including dozens of new pieces of art created just for the digital game by Tosx!",
 		"Consider supporting Tosx by purchasing physical cards from DriveThruRpg or checking out MeromorphGames.com."
 	],
-	"version": "v0.4.8",
+	"version": "v0.4.9",
 	"color": "ec59a0",
 	"publishedFileId": 2437294168,
 	"credits": [
 		"<b>Art:</b> Tosx.",
-		"<b>Software Development:</b> DragonZ, MSpekkio, NinjaMonkey, QuagmaBlast, smJake123, wrhyme29.",
+		"<b>Software Development:</b> ChrisDS, DragonZ, MSpekkio, NinjaMonkey, QuagmaBlast, smJake123, wrhyme29.",
 		"<b>Art Direction:</b> catwhowalksbyhimself, smJake123.",
 		"<b>Music:</b> Shane Ivers.",
 		"<b>Music Direction:</b> TopherGerkey.",
-		"<b>Playtesters:</b> DireAvenger20, TheRealTails, TopherGerkey, jetto, qoalabear, ChronosMysty, Ruduen, origamiswami, MrEdgeCase, Darkstand, Bart_KF jkittycat, Pricyprov, kree1, Fezudu, ColinAmos, wilwil60 and many more.",
+		"<b>Playtesters:</b> DireAvenger20, TheRealTails, TopherGerkey, jetto, qoalabear, ChronosMysty, Ruduen, origamiswami, MrEdgeCase, Darkstand, jkittycat, Pricyprov, kree1, Fezudu, ColinAmos, wilwil60 and many more.",
 		"<b>Additional Music Credits can be found here:</b> https://bit.ly/38mwFJo"
 	],
 	"namespace": "Cauldron",
